Closed
Bug 1096930
Opened 11 years ago
Closed 11 years ago
Crash while trying to enter the password for my Firefox account
Categories
(Core :: Disability Access APIs, defect)
Tracking
()
RESOLVED
FIXED
mozilla36
Tracking | Status | |
---|---|---|
b2g-v2.2 | --- | affected |
People
(Reporter: MarcoZ, Assigned: surkov)
References
Details
(Keywords: crash)
Crash Data
Attachments
(3 files)
STR:
1. Turn on screen reader.
2. Go to Settings, Firefox Account.
3. Touch and double-tap Create Or Sign In.
4. Double-tap the entry and enter your Firefox account's e-mail address.
5. Hit Next.
6. When the password page appears, double-tap the entry field and start typing your password.
Result: I get a consistent crash either as soon as the password page loads, or while half-way through entering my password.
Build ID is 20141110160207.
I let it submit the crash reports, but I don't know how to get to them to paste them here.
Reporter | ||
Comment 1•11 years ago
|
||
It's a crash in a11y code:
bp-76d8b8ec-ad42-4ecc-bc20-33ced2141111
Alex, could this be fall-out from bug 1076816?
Crash Signature: [@ mozilla::a11y::xpcAccessible::GetState(unsigned int*, unsigned int*) ]
Component: Gaia::Settings → Disability Access APIs
Product: Firefox OS → Core
Version: unspecified → Trunk
Reporter | ||
Updated•11 years ago
|
Flags: needinfo?(surkov.alexander)
Assignee | ||
Comment 2•11 years ago
|
||
Assignee: nobody → surkov.alexander
Flags: needinfo?(surkov.alexander)
Attachment #8520651 -
Flags: review?(mzehe)
Reporter | ||
Updated•11 years ago
|
Attachment #8520651 -
Flags: review?(mzehe) → review+
Comment 3•11 years ago
|
||
Status: NEW → RESOLVED
Closed: 11 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla36
Comment 4•10 years ago
|
||
I have reproduced this bug on search bar, after you turn on screen reader, then invoke the keyboard for twice or more tims, the device will restart, then the crash will pop up. And the bug still exist in other input box(ex:Contacts, Message and so on).
Steps:
1. Turn on screen reader.
2. Back to Home.
3. Tap the search bar.
4. Input some char from keyboard.
5. Remove the focus box to other area, then double-tap the input bar.
6. Repear step 4-5.
Actual result:
6. Device will restart. After restart completes, the crash pops up.
Expected result:
6. The keyboard can be invoked normally, and you can input chars correctly.
Fail rate: 5/5
Found time:17:42
See attachment: logcat_1742.txt and 2015-02-14-17-44-06.png.
**Title
~B2G 37.0a2 Crash Report [@ mozilla::a11y::xpcAccessible::GetState(unsigned int*, unsigned int*) ]
**Crash Report
~https://crash-stats.mozilla.com/report/index/47281271-d81f-4d0b-a2fc-15d262150215
Flame 2.2 version:
Build ID 20150214002504
Gaia Revision ea64caf6d4ab03fc4472eca9f41f20d651d55fa9
Gaia Date 2015-02-13 05:27:43
Gecko Revision https://hg.mozilla.org/releases/mozilla-b2g37_v2_2/rev/6de30e6bbc84
Gecko Version 37.0a2
Device Name flame
Firmware(Release) 4.4.2
Firmware(Incremental) eng.cltbld.20150214.044811
Firmware Date Sat Feb 14 04:48:22 EST 2015
Bootloader L1TC000118D0
Comment 5•10 years ago
|
||
Comment 6•10 years ago
|
||
Updated•10 years ago
|
QA Whiteboard: [MGSEI-Triage+]
status-b2g-v2.2:
--- → affected
You need to log in
before you can comment on or make changes to this bug.
Description
•