Bug 1096930 - Crash while trying to enter the password for my Firefox account, r=marcoz