accessible/xpcom/xpcAccessible.cpp
@@ -199,8 +199,12 @@ NS_IMETHODIMP
 xpcAccessible::GetState(uint32_t* aState, uint32_t* aExtraState)
 {
   NS_ENSURE_ARG_POINTER(aState);
+  
+  if (!Intl())
+    nsAccUtils::To32States(states::DEFUNCT, aState, aExtraState);
+  else
+    nsAccUtils::To32States(Intl()->State(), aState, aExtraState);
 
-  nsAccUtils::To32States(Intl()->State(), aState, aExtraState);
   return NS_OK;
 }
 
